--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,178 @@
+/*
+=============== 
+Fonts
+===============
+*/
+@import url('https://fonts.googleapis.com/css?family=Source+Sans|Roboto:400,700&display=swap');
+
+/*
+=============== 
+Variables
+===============
+*/
+
+:root {
+  
+  /* primary colours*/
+  --clr-primary-1: #6d6875;
+  --clr-primary-2: #b5838d;
+  --clr-primary-3: #e5989b;
+  --clr-primary-4: #ffb79a;
+  --clr-primary-5: #ffcdb2;
+  
+  /* greys */
+  --clr-grey-1: #343a40;
+  --clr-grey-2: #60676d;
+  --clr-grey-3: #90919b;
+  --clr-white: #f8f9fa;
+  --clr-black: #212529;
+  
+  --ff-primary: 'Cookie', sans-serif;
+  --ff-secondary: 'Source Sans', sans-serif;
+  --transition: all 0.15s ease-in-out;
+  --spacing: 0.1rem;
+  --radius: 0.25rem;
+  --light-shadow: 0 0 10px rgba(90, 82, 105, 0.15);
+  --dark-shadow: 0 0 15px rgba(90, 82, 105, 0.25);
+  --max-width: 1170px;
+  --fixed-width: 620px;
+}
+/*
+=============== 
+Global Styles
+===============
+*/
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
+  background-color: var(--clr-white);
+  max-width: 1540px;
+  padding: 15px;
+  margin: auto;
+}
+
+.single-recipe {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
+.image::before {
+  /* Renders the styles */
+  content: "";
+  /* Fills the entire space */
+  position: absolute;
+  top: 0;
+  left: 0;
+  /* Creates the shape */
+  border-radius: 7px;
+  width: 300px;
+  height: 150px;
+  background: var(--clr-primary-4);
+  /* Positions the shape */
+  transform: translate(-3%, -7%);
+  z-index: -10;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.image {
+  z-index: 10;
+  border-radius: 7px;
+  object-fit: cover;
+  width: 300px;
+  height: 150px;
+  margin-bottom: 30px;
+  position: relative;
+}
+
+img {
+  z-index: 10;
+  border-radius: 7px;
+  object-fit: cover;
+  width: 300px;
+  height: 150px;
+  margin-bottom: 30px;
+  position: relative;
+}
+
+.caption {
+  color: var(--clr-grey-1);
+  margin-bottom: 30px;
+  letter-spacing: 1px;
+  font-size: 25px;
+}
+
+.text {
+  color: var(--clr-grey-2);
+  margin-bottom: 15px;
+}
+
+.ingredients {
+  color: var(--clr-grey-3);
+  margin-bottom: 15px;
+  font-size: 14px;
+  list-style: none;
+}
+
+.ingredients li {
+  margin-bottom: 10px;
+}
+
+.title {
+  font-size: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 50px;
+  cursor: default;
+  transition: var(--transition);
+}
+
+.title:hover {
+  color: var(--clr-primary-1);
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 50px;
+}
+
+.search-bar {
+  width: 95%;
+  max-width: 400px;
+  padding: 10px 15px;
+  border: none;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  box-shadow: var(--light-shadow);
+}
+
+.search-bar:focus, .search-bar:active {
+  border: none;
+  outline: none;
+  box-shadow: var(--dark-shadow);
+}
+
+.search-button {
+  padding: 10px 25px;
+  border: none;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  box-shadow: var(--light-shadow);
+  background-color: var(--clr-primary-3);
+  font-family: 'Roboto', sans-serif;
+  color: var(--clr-white);
+  cursor: pointer;
+  transition: var(--transition);
+}
+
+.search-button:hover {
+  background-color: var(--clr-primary-4);
 }
